--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/ecom
+MONGO_URI=mongodb+srv://dilpreet2943:MNhLOnoIUDwIK06a@cluster0.afkuhsl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=your_jwt_secret
